--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,26 +1,21 @@
-#content {
-    max-width: 1600px;
-    margin: 0 auto;
+@import url('https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+
+body {
+    background-color: #fcfbfb;
+    font-family: 'Raleway', Arial, sans-serif;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
 }
 
-
-#content {
-    max-width: 1600px;
-    margin: 0 auto;
-    text-align: center;
+h2 {
+    margin: 0;
 }
 
-
-nav a,
-#hero-msg h1, #hero-msg h4,
-.button-box,
-main section {
-    text-align: center;
-}
-
-
-#background {
-    height: 725px;
+.home-title {
+    font-family: 'Rock Salt', 'Bradley Hand', sans-serif;
+    font-size: 2em;
 }
 
 
@@ -83,4 +78,62 @@ footer p a:hover {
 
 footer p {
     font-size: 1.5em;
+}
+
+
+#logo_link {
+    padding-top: 5px;
+}
+
+nav a {
+    text-decoration: none;
+    color: #fcfbfb;
+    text-align: center;
+    padding: 35px;
+}
+
+.book, .join {
+    background-color: #d9c2a3;
+    color: black;
+    text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
+}
+
+.icon {
+    padding-top: 10px;
+}
+
+.msg {
+    background-color: #6f7364;
+    line-height: 1.5em;
+    padding: 35px;
+}
+
+.msg p {
+    padding-bottom: 15px;
+}
+
+footer {
+    padding: 25px 50px;
+    margin-top: 200px;
+}
+
+footer .social img {
+    padding-top: 15px;
+}
+
+.card-img {
+    border: 10px solid #d9c2a3;
+}
+
+main section img {
+    box-sizing: border-box;
+}
+
+.rivers-card, .camping-card, .rapids-card {
+    margin: 200px auto; /* Center the elements horizontally */
+    text-align: center; /* Center the text inside the cards */
 }
