--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -18,12 +18,13 @@ h2 {
     font-size: 2em;
 }
 
-
 body {
     background-color: #fcfbfb; 
 }
 
 header {
+    display: grid;
+    grid-template-columns: 150px auto;
     background-color: rgba(20,30,13, .7);
 }
 
@@ -39,7 +40,6 @@ footer {
     background-color: #ffffff; 
 }
 
-
 nav a,
 nav a:hover,
 .home-title,
@@ -54,7 +54,6 @@ footer a:hover {
     color: #000000;
 }
 
-
 .logo,
 .icon {
     width: 80px;
@@ -63,7 +62,6 @@ footer a:hover {
 #hero-img {
     width: 100%;
 }
-
 
 nav a,
 .book, .join,
@@ -75,14 +73,14 @@ footer p a:hover {
     text-decoration: underline;
 }
 
-
 footer p {
     font-size: 1.5em;
 }
 
-
 #logo_link {
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 
 nav a {
@@ -119,6 +117,10 @@ nav a {
 footer {
     padding: 25px 50px;
     margin-top: 200px;
+    background-color: #6f7364;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 footer .social img {
@@ -127,13 +129,64 @@ footer .social img {
 
 .card-img {
     border: 10px solid #d9c2a3;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 
-main section img {
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+
+.main section img {
     box-sizing: border-box;
+    width: 100%;
 }
 
 .rivers-card, .camping-card, .rapids-card {
-    margin: 200px auto; /* Center the elements horizontally */
-    text-align: center; /* Center the text inside the cards */
+    margin: 50px auto;
+    width: 60%;
+    text-align: center;
+}
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
