--- a/wwr/asquared/styles/site-plan.css
+++ b/wwr/asquared/styles/site-plan.css
@@ -26,155 +26,84 @@ Fonts are separated by a | */
   --nav-hover-background-color: #396E94;
 }
 
-
-/*  Look around below...but DON'T CHANGE ANYTHING! */
-
+/* Homepage Styles */
 body {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 4em;
-  font-size: 18px;
-  text-align: center;
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
 }
-img {
-  display: block;
-  margin: 0 auto;
-}
-h1, h2, h3, h4, h5, h6 {
-  font-family: var(--heading-font);
-  color: var(--headline-color-on-white);
-}
-p {
-  font-family: var(--paragraph-font);
-  color: var(--paragraph-color-on-white);
-  padding: 1em;
-}
-h2 {
-  text-align: center;
-}
-hr {
-  height: 3px;
-  margin: 35px 0;
-  background: var(--accent1-color);
-}
+
+/* Header */
 header {
-  padding: 1em;
-  text-align: center;
-  color: var(--headline-color-on-color);
-  background-color: var(--paragraph-background-color);
-}
-header > h1, header > h2 {
-  color: var(--headline-color-on-color);
-}
-
-p {
-  font-family: var(--paragraph-font);
-  color: var(--paragraph-color-on-white);
-  padding: 1em;
-}
-.colors {
-  width: 100%;
-  min-width: 350px;
-  margin: 30px auto;
+  background-color: #396E94;
+  color: white;
+  padding: 20px;
   text-align: center;
 }
-.colors th {
-  background-color: #999;
-}
-.colors td{
-  width: 25%;
-  height: 3em;
+
+header h1 {
+  font-size: 32px;
+  margin-bottom: 10px; /* Adjusted margin for spacing */
+  font-weight: bold;
+  text-transform: capitalize;
 }
 
-.primary {
-  background-color: var(--primary-color);
-}
-.secondary {
-  background-color: var(--secondary-color);
-}
-.accent1 {
-  background-color: var(--accent1-color);
-}
-.accent2{
-  background-color: var(--accent2-color);
-}
-
-p.colored {
-  background-color: var(--paragraph-background-color);
-  color: var(--paragraph-color-on-color);
-}
-
+/* Navigation */
 nav {
-  background-color: var(--nav-background-color);
-  line-height: 3em;
+  background-color: #D4AC0D;
+  padding: 20px;
   text-align: center;
-  font-size: 1.2em;
 }
-nav  {
+
+nav ul {
   list-style-type: none;
-  display: flex;
-
+  margin: 0;
+  padding: 0;
 }
+
+nav li {
+  display: inline-block;
+  margin: 0 10px; /* Adjusted margin for equal spacing */
+}
+
 nav a {
-  padding:1em;
-  min-width: 120px;
   text-decoration: none;
-  padding: 10px;
+  color: white;
+  font-weight: bold;
+  text-transform: capitalize;
+  padding: 10px 15px; /* Adjusted padding for spacing */
+}
 
-}
-nav a:link, nav a:visited {
-  color: var(--nav-link-color);
-}
 nav a:hover {
   color: var(--nav-hover-link-color);
   background-color: var(--nav-hover-background-color);
 }
 
+/* Content */
+main {
+  padding: 20px;
+}
+
+h2 {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+p {
+  line-height: 1.5;
+}
+
+/* Sitemap */
 .sitemap {
   display: grid;
-  justify-content: center;
-
-  grid-template-columns: repeat(6, 15%);
-  grid-template-rows: 3em 1.5em 1.5em 3em;
-  grid-template-areas: ". . home home . ."
-    ". . . top . ."
-    ". left left right right ."
-    "page2 page2 . . page3 page3";
+  grid-template-columns: repeat(4, 1fr); /* Equally spaced columns */
+  grid-gap: 20px;
 }
-.sitemap > div {
 
+.sitemap div {
+  background-color: #ccc;
+  padding: 20px;
   text-align: center;
-
-}
-.sm-home {
-  grid-area: home;
-  background-color: #ccc;
-  line-height: 3em;
-}
-.sm-page2 {
-  grid-area: page2;
-  background-color: #ccc;
-  line-height: 3em;
-}
-.sm-page3 {
-  grid-area: page3;
-  background-color: #ccc;
-  line-height: 3em;
-}
-
-.top {
-  grid-area: top;
-  border-left: 1px solid;
-}
-
-.left {
-  grid-area: left;
-  border-top: 1px solid;
-  border-left: 1px solid;
-}
-
-.right {
-  grid-area: right;
-  border-top: 1px solid;
-  border-right: 1px solid;
+  font-weight: bold;
+  text-transform: capitalize;
 }
